# call_me_maybe

./: Makefile  README.md  pyproject.toml
data/input/: function_calling_tests.json  invalid_test_case.json
data/output/: function_calling_results.json
moulinette/moulinette/: __main__.py
src/: __main__.py  cache.py  extractor.py  fsm.py  generator.py  hints.py  loader.py  pipeline.py  prompts.py  schemas.py  tokeniser.py  vocab.py
